--- a/configurations/nginx/isolutionsghost.fr.conf
+++ b/configurations/nginx/isolutionsghost.fr.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name isolutionsghost.fr www.isolutionsghost.fr;
+    server_name ;
 
     ssl_certificate /etc/ssl/certs/ssl_certificate.cer; # Path to your SSL certificate
     ssl_certificate_key /etc/ssl/private/ssl_private_key.key; # Path to your SSL certificate key
@@ -30,6 +30,6 @@ server {
 server {
     listen 80;
     listen [::]:80;
-    server_name isolutionsghost.fr www.isolutionsghost.fr;
+    server_name ;
     return 301 https://$host$request_uri;
 }
